2011-09-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/lpc32xx.inc: Workaround for GCC bug 50106.
	* include/lpc32xx.h: Fixed register map for NAND MLC.
	* include/boot.h: Declare lpc32xx_set_boot_block_bad().
	* misc/boot.c: Define lpc32xx_set_boot_block_bad().
	* include/nand-mlc.h, misc/nand-mlc-erase-block-safe.c,
	misc/nand-mlc-read-blocks.c, misc/nand-mlc-write-blocks.c,
	misc/nand-mlc.c: Changed bad block handling.  Support for non-aligned
	data.  Documentation.

2011-08-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/i2c.c: Bugfix.

2011-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/.cvsignore: New file.
	* include/bspopts.h.in: Removed file.

2011-07-04	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/nand-mlc-erase-block-safe.c, misc/nand-mlc-write-blocks.c,
	include/nand-mlc.h: Fixed write blocks.

2011-07-01	Stephan Hoffmann <sho@reLinux.de>
		Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/nand-mlc-erase-block-safe.c: New file
	* Makefile.am: Reflect change from above.
	* misc/nand-mlc-write-blocks.c: Use lpc32xx_mlc_erase_block_safe_3().
	* include/nand-mlc.h: Bad block handling.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to cache_.h.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to clockdrv_shell.h.

2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Cache manager changes.

2011-05-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Install new header files.
	* include/bsp.h, include/emc.h, include/lpc32xx.h, misc/emc.c: Update
	for API changes.

2011-03-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, include/bspopts.h.in: New BSP option
	LPC32XX_SCRATCH_AREA_SIZE.  Disable BSP option
	LPC32XX_DISABLE_READ_ONLY_PROTECTION for all BSPs.