@@ -109,8 +109,12 @@ libbsp_a_SOURCES += ../../shared/src/irq-generic.c \
 
 # Console
 libbsp_a_SOURCES += ../../shared/console.c \
+        ../../shared/console_select.c \
 	console/console-config.c \
-	console/hsu.c
+	console/hsu.c \
+        ../../shared/console_read.c \
+        ../../shared/console_write.c \
+        ../../shared/console_control.c
 
 # Clock
 libbsp_a_SOURCES += ../shared/lpc/clock/lpc-clock-config.c
