@@ -1,3 +1,9 @@
+2011-10-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>
+
+	PR 1917/bsps
+	* Makefile.am, console/console-config.c, console/hsu.c: Modifications
+	to add dynamic tables for libchip serial drivers.
+
 2011-09-22	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* make/custom/lpc32xx.inc: Workaround for GCC bug 50106.
